app/components/areas/Sidebar/style.scss
@import "../../../styles/colors.scss";
@import "../../../styles/values.scss";
@import "../../../styles/fonts.scss";

#sidebar {

  z-index: 10;
  overflow-y: auto;
  box-shadow: 0 0 6px 0 rgba(209, 203, 203, 0.44);

  img[alt=Help] {
    width: 14px;
  }

  .menu {
    ul {
      width: 100%;
      display: flex;
      flex-direction: row;

      li {
        text-transform: uppercase;
        text-align: center;
        flex-grow: 1;
        width: 20%;
      }
    }
  }

  .breadcrumbs {
    padding: 10px 40px;
    font-size: 14px;
    font-weight: bold;
    text-transform: uppercase;
    background-color: $bg-color-3;
    color: $font-color-1;
    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.08);

    a {
      color: $font-color-3;
    }

    ul {
      display: flex;
      flex-direction: row;

      li + li {
        margin-left: 0.5em;
      }

      li + li::before {
        margin-right: 0.5em;
        content: "-";
      }
    }
  }

  .content, .filters {
    font-weight: 100;
    font-size: 16px;
    padding: 32px 40px 20px;

    span.subtitle {
      display: block;
      font-family: ITC Officina Sans Std;
      font-size: 14px;
      line-height: 20px;
    }

    dl {
      dt {
        font-family: Libre Baskerville, serif;
        margin-bottom: 8px;
      }

      dd {
        > ul {
          font-size: 14px;
          > li:not(:last-child) {
            margin-bottom: 2em;
            li {
              margin-top: .5em;
            }
          }
        }
      }
    }

  }

  .content {
    border-bottom: 1px solid $accent-color-3;
  }

  .filters {
    li.see-overall {
      width: 100%;
      margin-top: 1em;

      a {
        width: 100%;
        display: block;
        box-sizing: border-box;
        padding: 11px 0;
        text-align: center;
        border: 1px solid $bg-color-2;
        border-radius: 2px;
        color: $font-color-3;
      }
    }
  }

}

